k8s-gray/deployment-yellow.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment-yellow
  labels:
    app: my-app
    version: yellow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: yellow
  template:
    metadata:
      labels:
        app: my-app
        version: yellow
    spec:
      containers:
      - name: my-app
        image: harbor.pks.vxflex.poc/devops/demo:yellow
        imagePullPolicy: Always
        ports:
        - containerPort: 9999
