k8s-gray/service-gray.yml
kind: Service
apiVersion: v1
metadata:
  name: my-gray-service
spec:
  selector:
    app: my-app
    version: gray
  ports:
  - protocol: TCP
    port: 8989
    targetPort: 9999
