k8s-gray/service-yellow.yml
kind: Service
apiVersion: v1
metadata:
  name: my-yellow-service
spec:
  selector:
    app: my-app
    version: yellow
  ports:
  - protocol: TCP
    port: 8989
    targetPort: 9999
