k8s-gray/ingress-gray.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "BG-COLOR"
    nginx.ingress.kubernetes.io/canary-by-header-value: "gray"
  labels:
    app: my-app
  name: demo-ingress-gray
spec:
  rules:
  - host: gray.pks.vxflex.poc
    http:
      paths:
      - backend:
          serviceName: my-gray-service
          servicePort: 8989
