k8s-gray/ingress-yellow.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: my-app
  name: demo-ingress-yellow
spec:
  rules:
  - host: gray.pks.vxflex.poc
    http:
      paths:
      - backend:
          serviceName: my-yellow-service
          servicePort: 8989
